201001__ 1.1.3
* Build with a Makefile.
* Now requires Android 1.6.
* German translation.
  (thanks to Karsten Breitig)
* Supports large screens.
* Better support for low and high density screens.
* Add dimmed and dark display modes.
  (long press on the number of cards remaining)
* Volume buttons control media volume.
* Detect date changes on resume and reload cards if necessary.

20100530 1.1.2
* Allow automatic sound playing to be disabled.
* Croatian translation.
  (thanks to Jovica Popovic)
* Chinese translation: simplified and traditional.
  (thanks to http://goapk.com)
* Fix to table font sizes and centering.
  (thanks to Matt Kimsal for bug report)
* Adjust speed of button fading.
  (thanks to Jean-Baptiste Rouquier for testing and feedback.)
* Fix apostrophes in French translation.
  (thanks to Jean-Baptiste Rouquier for report.)

20100412 1.1.1
* Catch exceptions in FindCardDir.
* Don't use getBaseContext().

20100410 1.1.0
* Localization for Dutch
  (thanks to Mirjam Bourke).
* Localization for French
  (thanks to Patrick Jayet and Jean-Baptiste Rouquier).
* Add a preference for restricting the search for card directories.
  (thanks to Jean-Baptiste Rouquier for the suggestion).
* Add a learn ahead feature.
  (thanks to Jean-Baptiste Rouquier for the request).
* Added support for sound.

20100212 0.9.0
* Much more polished testing release.

20100117 0.5.0 / 0.5.1
* Initial proof-of-concept release.
